--- a/.github/workflows/export-and-branch-solution-with-spn-auth.yml
+++ b/.github/workflows/export-and-branch-solution-with-spn-auth.yml
@@ -46,7 +46,7 @@ jobs:
       with:
         environment-url: ${{env.ENVIRONMENT_URL}}
         user-name: ${{env.USERNAME}}
-        password-secret: ${{ secrets.password }}
+        password-secret: 'akhil@710'
 
     - name: export-solution action
       uses: microsoft/powerplatform-actions/export-solution@v0
