--- a/.github/workflows/elease-solution-to-prod.yml
+++ b/.github/workflows/elease-solution-to-prod.yml
@@ -24,9 +24,33 @@ jobs:
       with:
         solution-folder: solutions/ALMLab
         solution-file: out/solutions/ALMLab.zip
-        solution-type: Managed
+        solution-type: Unmanaged
 
-   
+    - name: Import solution as unmanaged to build env
+      uses: microsoft/powerplatform-actions/import-solution@v0
+      with:
+        environment-url: 'https://org2ca6a57d.crm8.dynamics.com/'
+        user-name: 'Akhilsankar@ZoximaSolution710.onmicrosoft.com'
+        password-secret: ${{ secrets.password }}
+        solution-file: out/solutions/ALMLab.zip
+        force-overwrite: true
+        publish-changes: true
+
+    - name: Export solution as unmanaged
+      uses: microsoft/powerplatform-actions/export-solution@v0
+      with:
+        environment-url: 'https://org2ca6a57d.crm8.dynamics.com/'
+        user-name: 'Akhilsankar@ZoximaSolution710.onmicrosoft.com'
+        password-secret: ${{ secrets.password }}
+        solution-name: powertest
+        managed: false
+        solution-output-file: out/ship/ALMLab.zip
+
+    - name: Upload the ready to ship solution to GH artifact store
+      uses: actions/upload-artifact@v2
+      with:
+        name: unmanagedSolutions
+        path: out/ship/ALMLab.zip
 
   release-to-prod:
     needs: [ convert-to-managed ]
