--- a/.github/workflows/elease-solution-to-prod.yml
+++ b/.github/workflows/elease-solution-to-prod.yml
@@ -66,7 +66,7 @@ jobs:
     - name: Fetch the ready to ship solution from GH artifact store
       uses: actions/download-artifact@v2
       with:
-        name: managedSolutions
+        name: unmanagedSolutions
         path: out/release/
 
     - run: get-childitem .\out\release\
