--- a/.github/workflows/elease-solution-to-prod.yml
+++ b/.github/workflows/elease-solution-to-prod.yml
@@ -42,7 +42,7 @@ jobs:
         environment-url: 'https://org2ca6a57d.crm8.dynamics.com/'
         user-name: 'Akhilsankar@ZoximaSolution710.onmicrosoft.com'
         password-secret: ${{ secrets.password }}
-        solution-name: AkhilTest
+        solution-name: test123
         managed: true
         solution-output-file: out/ship/ALMLab.zip
 
