--- a/.github/workflows/elease-solution-to-prod.yml
+++ b/.github/workflows/elease-solution-to-prod.yml
@@ -24,7 +24,7 @@ jobs:
       with:
         solution-folder: solutions/ALMLab
         solution-file: out/solutions/ALMLab.zip
-        solution-type: Managed
+        solution-type: Unmanaged
 
     - name: Import solution as unmanaged to build env
       uses: microsoft/powerplatform-actions/import-solution@v0
@@ -43,7 +43,7 @@ jobs:
         user-name: 'Akhilsankar@ZoximaSolution710.onmicrosoft.com'
         password-secret: ${{ secrets.password }}
         solution-name: test123
-        managed: true
+        managed: false
         solution-output-file: out/ship/ALMLab.zip
 
     - name: Upload the ready to ship solution to GH artifact store
