--- a/.github/workflows/elease-solution-to-prod.yml
+++ b/.github/workflows/elease-solution-to-prod.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Export solution as unmanaged
       uses: microsoft/powerplatform-actions/export-solution@v0
       with:
-        environment-url: 'https://org2ca6a57d.crm8.dynamics.com/'
+        environment-url: 'https://org72db9f12.crm8.dynamics.com/'
         user-name: 'Akhilsankar@ZoximaSolution710.onmicrosoft.com'
         password-secret: ${{ secrets.password }}
         solution-name: test0000
